# daily-news-briefing

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: daily-news.yml
src/daily_news_briefing/: article.py  cli.py  config.py  dedupe.py  editor.py  llm.py  mailer.py  models.py  pipeline.py  render.py  rss.py  state.py  utils.py
state/: seen_events.json
tests/: test_cli.py  test_dedupe.py  test_llm.py  test_pipeline.py  test_render.py  test_rss.py
